处理过期方式